--- a/Module-43/style.css
+++ b/Module-43/style.css
@@ -1,6 +1,24 @@
+*{
+    font-family: monospace;
+    text-align: center;
+}
+p{
+    box-sizing: content-box;  
+    width: 50%;
+    height: 100px;
+    padding-top: 8%;  
+    border: 3px solid rgb(172, 175, 0);
+    margin: auto auto;
+    border-radius: 10px;
+    background-color: gray;
+    color: white;
+    font-weight: 900;
+    font-style: italic;
+}
 img{
     height: 50%;
     width: 50%;
     display: block;
     margin: 5% auto;
+    border-radius: 30px;
 }
